[package]
name = "fanitrade-utils"
version = "0.1.0"
authors = ["James <james@fanitrade.com>"]
edition = "2021"

[dependencies]
solana-program = "1.7.14"
borsh = "0.9.1"
borsh-derive = "0.9.1"
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0.30"
spl-token = { version = "3.0.1", features = ["no-entrypoint"] }
[features]
no-entrypoint = []

[dev-dependencies]
solana-program-test = "1.10.8"
solana-sdk = "1.10.8"

[lib]
crate-type = ["cdylib", "lib"]