[package]
authors = ["James <james@fanitrade.com>"]
edition = "2021"
name = "fanitrade-utils"
version = "0.1.0"

[dependencies]
anchor-lang = "=0.24.2"
anchor-spl = "=0.24.2"
arrayref = "0.3.6"
borsh = "0.9.1"
borsh-derive = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "=1.9.29"
spl-associated-token-account = {version = "1.0.2", features = ["no-entrypoint"]}
spl-token = {version = "=3.2.0", features = ["no-entrypoint"]}
thiserror = "1.0.30"
uint = "=0.9.1"
[features]
no-entrypoint = []

[dev-dependencies]

[lib]
crate-type = ["cdylib", "lib"]
